[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/mage.png" type="Texture" id=1]
[ext_resource path="res://mage/mage.gd" type="Script" id=2]
[ext_resource path="res://demon/demon.tscn" type="PackedScene" id=3]
[ext_resource path="res://behaviours/target_velocity_behaviour.gd" type="Script" id=4]
[ext_resource path="res://behaviours/damageable_behaviour.gd" type="Script" id=5]
[ext_resource path="res://behaviours/AnimationPlayerDamage.tscn" type="PackedScene" id=6]
[ext_resource path="res://camera/Camera2D.gd" type="Script" id=7]
[ext_resource path="res://assets/dirt.png" type="Texture" id=8]
[ext_resource path="res://Main.gd" type="Script" id=9]
[ext_resource path="res://assets/blood_feedback.png" type="Texture" id=10]
[ext_resource path="res://ui/DamageFeedback.gd" type="Script" id=11]

[sub_resource type="CapsuleShape2D" id=1]
radius = 50.9197
height = 30.8085

[sub_resource type="Animation" id=2]
resource_name = "Damage"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 8 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 2000, 2000 )

[node name="MageBody" type="KinematicBody2D" parent="."]
position = Vector2( 151.329, 151.329 )
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="MageBody"]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape2D" parent="MageBody"]
position = Vector2( 0, -0.840897 )
shape = SubResource( 1 )

[node name="FireballSpawnPosition" type="Position2D" parent="MageBody"]
position = Vector2( 81.5661, -1.68179 )
__meta__ = {
"_gizmo_extents_": 48.8
}

[node name="AnimationPlayerDamage" parent="MageBody" instance=ExtResource( 6 )]

[node name="TargetVelocityBehaviour" type="Node2D" parent="MageBody"]
position = Vector2( -151.329, -151.329 )
script = ExtResource( 4 )
acceleration_amount = 2000.0
friction = 1000.0

[node name="DamageableBehaviour" type="Node2D" parent="MageBody"]
position = Vector2( -151.329, -151.329 )
script = ExtResource( 5 )

[node name="Demon" parent="." instance=ExtResource( 3 )]
position = Vector2( 425.987, 680.819 )

[node name="Demon2" parent="." instance=ExtResource( 3 )]
position = Vector2( 1037.73, 472.041 )

[node name="Demon3" parent="." instance=ExtResource( 3 )]
position = Vector2( 931.095, 817.76 )

[node name="demon" parent="." instance=ExtResource( 3 )]
position = Vector2( 503.697, 331.313 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
script = ExtResource( 7 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DamageFeedback" type="TextureRect" parent="CanvasLayer"]
visible = false
anchor_left = -0.01
anchor_top = -0.01
anchor_right = 1.01
anchor_bottom = 1.01
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 10 )
expand = true
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/DamageFeedback"]
anims/Damage = SubResource( 2 )

[connection signal="damaged" from="MageBody/DamageableBehaviour" to="CanvasLayer/DamageFeedback" method="_on_DamageableBehaviour_damaged"]
